Reports page QA - cut tweets, fix image border radius on mobile (#245)
Remove tweet endorsements for articles, and fix image rounded corners on mobile

--- a/src/styles/reports.scss
+++ b/src/styles/reports.scss
@@ -12,6 +12,7 @@
         height: 100%;
 
         @include mobile {
+          border-radius: 0.25rem 0.25rem 0 0; // 4px
           height: 15rem; // 240px
         }
       }
